[package]
name = "fang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cfgrammar = "0.13.4"
lrlex = "0.13.4"
lrpar = "0.13.4"

[dependencies]
cfgrammar = "0.13.4"
lazy_static = "1.4.0"
lrlex = "0.13.4"
lrpar = "0.13.4"
once_cell = "1.19.0"
regex = "1.10.4"
